--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -5,7 +5,10 @@ html, body {
 	padding: 0px; 
 	margin: 0px; 
 	color: #e7e7e7;
-	background: #393e42;
+	/*background: #393e42;*/
+    background:url(../images/hmcs.jpg);
+    background-size:100% 100%;
+    background-repeat:no-repeat;
 	font-size: 12px;
 }
 
